--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">COVID19 TRACKER</string>
-    <string name="stat">Stats</string>
+
     <string name="home">Home</string>
+    <string name="stats">Stats</string>
 </resources>
