--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="home">Home</string>
     <string name="stats">Stats</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
